# ChangeLog for sys-apps/util-linux
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/util-linux/ChangeLog,v 1.304 2010/03/09 00:58:33 vapier Exp $

  09 Mar 2010; Mike Frysinger <vapier@gentoo.org> util-linux-2.17.1.ebuild:
  Update loop-aes patch #307987.

*util-linux-2.17.1 (05 Mar 2010)

  05 Mar 2010; Mike Frysinger <vapier@gentoo.org> +util-linux-2.17.1.ebuild:
  Version bump #307055 by Arseny Solokha.

  15 Feb 2010; Joseph Jezak <josejx@gentoo.org> util-linux-2.16.2.ebuild:
  Marked ppc stable for bug #301179.

  12 Feb 2010; Raúl Porcel <armin76@gentoo.org> util-linux-2.16.2.ebuild:
  sparc stable wrt #301179

*util-linux-2.17-r1 (09 Feb 2010)

  09 Feb 2010; Mike Frysinger <vapier@gentoo.org>
  +files/0001-libblkid-fix-segfault-in-drdb.patch,
  +util-linux-2.17-r1.ebuild:
  Add fix from upstream for blkid segfaults #301787 by Alec M.

  09 Feb 2010; Mike Frysinger <vapier@gentoo.org> util-linux-2.16.2.ebuild:
  Mark alpha/ia64/s390/sh stable #301179.

  04 Feb 2010; Markus Meier <maekke@gentoo.org> util-linux-2.16.2.ebuild:
  amd64/arm stable, bug #301179

  03 Feb 2010; Christian Faulhammer <fauli@gentoo.org>
  util-linux-2.16.2.ebuild:
  stable x86, bug 301179

  27 Jan 2010; Jeroen Roovers <jer@gentoo.org> util-linux-2.16.2.ebuild:
  Stable for HPPA (bug #301179).

  24 Jan 2010; Tom Gall <tgall@gentoo.org> util-linux-2.16.2.ebuild:
  stable on ppc64, bug #301179

  23 Jan 2010; Samuli Suominen <ssuominen@gentoo.org>
  util-linux-2.17.ebuild:
  Update loop-aes patch to upstream SRC_URI wrt #300869, thanks to James
  Ausmus and others.

*util-linux-2.17 (08 Jan 2010)

  08 Jan 2010; Mike Frysinger <vapier@gentoo.org> +util-linux-2.17.ebuild:
  Version bump.

  03 Jan 2010; <solar@gentoo.org> util-linux-2.16.2.ebuild:
  - cross compile love. default libtool files try to link with the host
  libc.so so we call elibtoolize to work the magic
