@@ -15,12 +15,13 @@ DIST util-linux-ng-2.16.1.tar.bz2 3489006 RMD160 1531884c047ab2d799ddb1f8b8fcc89
 DIST util-linux-ng-2.16.2.tar.bz2 3521956 RMD160 8c27748d804ad00efb153bf62f8c74756413888b SHA1 ace7a87ea61154210d9a11dd66b1b49d8130a828 SHA256 b1c3f5986b97753f3f83338b36aa25fc1370d96734313047da257df489f9a3eb
 DIST util-linux-ng-2.17.1-20100308.diff.bz2 57867 RMD160 26584b886ac8db1ec723690a685a442615366f2c SHA1 f76a2deb4b4012e98d82517d84dfb09725533a51 SHA256 c7478553e03ba7cbe28ddb066361966567d97b0746a13396bff12a83183014a0
 DIST util-linux-ng-2.17.1.tar.bz2 3801027 RMD160 a2fd1756fc36915e3e5867411c5e217918bba96b SHA1 e1772c333ac506163ceb443a3f93e66b8e27f3fd SHA256 e9c019ea3782dc20b82d27c1240009f9e194304a77ac36f51629a487a5181390
+DIST util-linux-ng-2.17.2.tar.bz2 3815657 RMD160 398aa54c6001acc16bc2d049ccbdb62824776ba3 SHA1 69275de84f7dabb7a5d90d0046c3a6b861c16a1d SHA256 c9ae801b6a5ab20b7749a278a8bf6830ef53adc5e8b7eb0ac1a9f410c774118f
 DIST util-linux-ng-2.17.tar.bz2 3767857 RMD160 adedfb12e415b5e48067c579ada4b6a9317e72dd SHA1 3be54ede41d0aff87a717a0d75c8f3c0171f85f6 SHA256 8720f7233394b68d17095707c195ebb014943c1075a18fb5fd21ec108f012be3
 EBUILD util-linux-2.16.1.ebuild 2966 RMD160 90bfbf3f4cd112dc91eca517b3da5ef16b27452f SHA1 6729510b9c24259836278bd1cc820aac9b7ac78b SHA256 792c505b9312f0d73ecd756e8148a514be2ef76d732245b9fd1c9836d71eeb34
 EBUILD util-linux-2.16.2.ebuild 3004 RMD160 534af998f29f374bd330fbcf1c104768682381d2 SHA1 7c3108fc6bc125b54e9d555d39e82fd904add267 SHA256 5a3659ea18f09a433333912bb28993f21fa2a90a06160e091d23741e6f969383
 EBUILD util-linux-2.17-r1.ebuild 3082 RMD160 602f086d792d040864867056aaed6ac53a2bc448 SHA1 aa64616588c8d8c5110d1957eb82d962ba711838 SHA256 59d17c725fbac6f48464e1797b25addc7e51201f98fdd023f1f8eaa00bdf6419
-EBUILD util-linux-2.17.1-r00.1.ebuild 3905 RMD160 4d339ec5e1f8d270fa87fffa0c6235cf22abf2ef SHA1 6ce3a0ad5a31078995a8b5f146c20ca40f82fb71 SHA256 0037322406f60610b2337a0a0ecdbad4339fa83faa54108249480245f94138a9
-EBUILD util-linux-2.17.1.ebuild 3024 RMD160 cd4d0ba32c11dea5da42e963947ecb8a8812c02f SHA1 56a12d5565edb2c7d556706ade3df16587d7dc29 SHA256 5ceb6b005d1ce2c2bf94675d0c3eeccffb92b0ee48409eb3bbce4e949c87f02d
+EBUILD util-linux-2.17.1-r00.1.ebuild 4312 RMD160 0110a6eb8bc77f0e2cfa605db654ca0425e571a1 SHA1 f0f38ddbc5f963251e6fc1a438d405d29484be74 SHA256 8b88ab02c001cb994d39b031b3d39cd43ed236dd192731159b40c10d17761af7
+EBUILD util-linux-2.17.2.ebuild 4320 RMD160 a98a2b07c3f955c502e730de53ae20eb000204fa SHA1 38cb5a5aceae3c2f762d30a1a2bd253003762dd1 SHA256 766afa2bc8794bb3b835fa68476625606258acd3071b2a397563fa53e208d778
 EBUILD util-linux-2.17.ebuild 3011 RMD160 63b93391829a55ddad32bd3c56c5e013ae66b2cb SHA1 0a63ce908b33b5b7e9e40eae3be3479726b2bd36 SHA256 98aeb2b884c6bb0c7631541aa6ac7348036206bf7c43280cc051b038f814175f
-MISC ChangeLog 46320 RMD160 01812d0e69a34f3bba0971ad205dce39510cf9b6 SHA1 23b323c4d9823915f78faca392a822faf39dfda8 SHA256 abc91c3dba9ae2adeade6bcce3d6c8ee664e8303cdce6e608a8e9d45be216001
+MISC ChangeLog 46620 RMD160 56485a704aefc76566eb6610c624cfeef55142d7 SHA1 5f208de2260c75ffaed0f2951734a1923f375a5b SHA256 c35945ccb7a38519c6a6bd9fdb976239e8fa8832ddbb8cdd9c28fb8690f747a1
 MISC metadata.xml 309 RMD160 d386a285872f68f80198f63be994dc8179e2254f SHA1 0e2ba366c96f233cf76e649dfa1eb1ba1ab8a897 SHA256 ccc7a0dd3a5a579aac578db211c116840fecf84e7e2c92d21efb430b51467264
